--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "react-firebase-hooks": "^4.0.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "^3.4.4",
-    "web-vitals": "^2.1.2",
-    "webpack": "^4.42.0"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
